# BSUIR-Labs

./: .gitattributes  .gitignore  readme.md  readme.txt
AVS/Course_work/: Course_work.docx  Flowchart of the Algorithm.vsdx  Functional Diagram.vsdx  Poster.docx  ~$atement.docx  ~$urse_work.docx
AVS/Lab1/: Lab1.docx  main.asm
AVS/Lab2/: Lab2.docx  lab2.asm
AVS/course_work/: Course_work.docx
IGI/LR3/: Input_data.py  Task2.py  Task4.py  Отчет.docx
IGI/LR4/: musician.pickle  test.py
ISOB/Lab1/: Lab1.docx
ISOB/Lab2/: 123.rtf  Lab2.docx  main.py
ISOB/Lab3/: Lab3.docx  client.py  server.py
ISOB/Lab4/: Lab4.docx  attack_ack_flood.py  attack_slowloris.py  attack_syn_flood.py  client_correct.py  server.py
ISOB/Lab5/: Lab5.docx  main.cpp
ISOB/Lab6/: Lab6.docx  main.py  ~$Lab6.docx
ISOB/Lab7/: Lab7.docx  first.cpp  second.cpp
ISP/Lab1-4/: Integral.xaml.cs
MDSYBD/: POSTGRES_LABS.session.sql  create_tables.sql  populate_data.sql  procedures.sql  queries.sql  readme.md  tables_description.md  tests.sql  triggers.sql  Схема БД.drawio
MDSYBD/Course_work/: Blank.docx  Course_work.docx
MDSYBD/Lab1/: main.sql
MDSYBD/Lab2/: main.sql
MDSYBD/Lab3/: dev.sql  main.sql  prod.sql
MDSYBD/Lab4/: data.sql  main.sql  test.sql
MDSYBD/Lab5/: report.html  report.sql  rollback.sql  tables_triggers.sql  test.sql
MDSYBD/Sql/: complex_queries.sql  create_tables.sql  populate_data.sql  procedures.sql  tests.sql  triggers.sql
MOiU/Lab1/: main.py
MOiU/Lab2/: main.py
TOFD/Lab3/dex-app/programs/dex-app/: Cargo.toml
TOFD/Lab3/dex-app/programs/dex-app/src/: lib.rs
(+947 files in other folders)
